--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.68MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 保加利亚-475.2KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇫🇷 法国-959.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 保加利亚-1.44MB/s(Youtube:不良林), server: 213.183.63.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇳🇱 荷兰-997.4KB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 波兰-1.48MB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 波兰-1.61MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 波兰-448.9KB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-224.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.47MB/s(Youtube:不良林), server: 213.183.59.229, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-895.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 保加利亚-695.6KB/s(Youtube:不良林), server: 213.183.63.218, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 保加利亚-301.3KB/s(Youtube:不良林), server: 213.183.63.218, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 波兰-490.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 波兰-1.51MB/s(Youtube:不良林), server: 217.30.10.63, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.68MB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-959.7KB/s(Youtube:不良林)
-      - 保加利亚-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
-      - 波兰-1.48MB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-448.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-224.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.47MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 保加利亚-301.3KB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
       - 波兰-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
