--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-865.7KB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 保加利亚-475.2KB/s(Youtube:不良林), server: 213.183.63.218, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 波兰-1.31MB/s(Youtube:不良林), server: 217.30.10.65, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇭🇰 香港-3.00MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
+  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 保加利亚-695.6KB/s(Youtube:不良林), server: 213.183.63.218, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 捷克-2.19MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 波兰-490.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 波兰-1.51MB/s(Youtube:不良林), server: 217.30.10.63, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
   - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-865.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-741.3KB/s(Youtube:不良林)
-      - 保加利亚-475.2KB/s(Youtube:不良林)
-      - 波兰-1.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 保加利亚-695.6KB/s(Youtube:不良林)
+      - 捷克-2.19MB/s(Youtube:不良林)
+      - 波兰-1.53MB/s(Youtube:不良林)
       - 波兰-490.6KB/s(Youtube:不良林)
-      - 波兰-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
