--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-3.00MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 保加利亚-695.6KB/s(Youtube:不良林), server: 213.183.63.218, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 捷克-2.19MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 波兰-1.53MB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 波兰-490.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 波兰-895.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 塞尔维亚-3.16MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.56MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-685.7KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇺🇸 美国-435.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 保加利亚-695.6KB/s(Youtube:不良林)
-      - 捷克-2.19MB/s(Youtube:不良林)
-      - 波兰-1.53MB/s(Youtube:不良林)
-      - 波兰-490.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 波兰-895.2KB/s(Youtube:不良林)
+      - 塞尔维亚-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
