--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-895.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 塞尔维亚-3.16MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.56MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 保加利亚-1.44MB/s(Youtube:不良林), server: 213.183.63.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇳🇱 荷兰-997.4KB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-1.43MB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 波兰-2.90MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-685.7KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
   - {name: 🇺🇸 美国-435.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-895.2KB/s(Youtube:不良林)
-      - 塞尔维亚-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 保加利亚-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.43MB/s(Youtube:不良林)
+      - 波兰-2.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
